--- a/pages/blog.html
+++ b/pages/blog.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 title: Posts
-weight: 2
-permalink: /posts/
+weight: 4
+permalink: /_blog/
 ---
 
 {% include posts/search.html %}
